--- a/TestPlugIn/AudioUnit_v3/Extension/TestAUv3ExtensionInfo.plist
+++ b/TestPlugIn/AudioUnit_v3/Extension/TestAUv3ExtensionInfo.plist
@@ -46,6 +46,7 @@
 					<key>tags</key>
 					<array>
 						<string>Effects</string>
+						<string>ARA</string>
 					</array>
 					<key>type</key>
 					<string>aufx</string>
